# P2P-Based_Document_Sharing_System

./: Cargo.toml
.VSCodeCounter/2023-12-08_20-42-53/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
p2p-desktop/: Cargo.toml
p2p-desktop/Downloads/zihao/127.0.0.1/8001/: zihao.txt
p2p-desktop/Downloads/zihao/127.0.0.1/8002/: zihao2.txt
p2p-desktop/Downloads/zihao2/127.0.0.1/8001/: zihao.txt
p2p-desktop/src/: main.rs
p2p-desktop/src/assistance/: connection.rs  error.rs  http.rs  metadata.rs  mod.rs
p2p-desktop/src/components/: home.rs  login.rs  mod.rs  page.rs  register.rs
p2p-desktop/src/components/home/: file.rs  mod.rs  search.rs  setting.rs  upload.rs
p2p-desktop/src/user/: user.rs
p2p-server/: .env  Cargo.toml
p2p-server/dbs/: backend.db
p2p-server/src/: main.rs
p2p-server/src/assistance/: error.rs  http_response.rs  mod.rs
p2p-server/src/handlers/: metadata.rs  user.rs
p2p-server/src/model/: metadata.rs  mod.rs  user.rs
p2p-web/: Cargo.toml  run.sh
p2p-web/src/: main.rs
p2p-web/src/components/: mod.rs  video_details.rs  videos_list.rs
