[package]
name = "p2p-desktop"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# ui framework
iced = { version = "0.10.0", features = ["lazy", "tokio"] }
iced_widget = "0.1.3"
# socket and async
tokio = { version = "1.34.0", features = ["full"] }
# complex request
reqwest = { version = "0.11.22", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
# env
dotenv = "0.15.0"
# log
env_logger = "0.10.0"
log = "0.4.20"

