[package]
name = "p2p-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4.4.0"
actix-session = { version = "0.8.0", features = ["cookie-session"] }
actix-cors = "0.6.4"
serde = { version = "1.0.192", features = ["derive"]}
env_logger = "0.10.0"
log = "0.4.20"
sqlx = { version = "0.7.2" ,features = ["sqlite", "runtime-tokio"]}
dotenv = "0.15.0"