[package]
name = "p2p-web"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# frontend framework
yew = { git = "https://github.com/yewstack/yew/", features = ["csr"] }
# fetch call
gloo-net = "0.2"
# ser and de json
serde = { version = "1.0", features = ["derive"] }
# executing Rust Future as a Promise
wasm-bindgen-futures = "0.4"